concession-kiosk-settings-demo/network-policy/backend/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-policy
  namespace: concession-kiosk-app
spec:
  podSelector:
    matchLabels:
      deployment: backend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          project: concession-kiosk-web
    - podSelector:
        matchLabels:
          deployment: frontend
    ports:
    - protocol: TCP
      port: 8080
